<resources>
    <string name="app_name" translatable="false">Eco</string>
    <string name="welcome_to_the_carbon_footprint_calculator" translatable="false">Welcome to the carbon footprint calculator</string>
    <string name="please_select_your_choices_for_each_category" translatable="false">Please select your choices for each category:</string>
    <string name="Transportation">Transportation</string>
    <string name="enter_your_choice" translatable="false">Enter your choice</string>
    <string name="Heating_Cooling_Electricity">Heating/Cooling/Electricity</string>
    <string name="Dietary_Emission">Meat/Dairy/Plant_based</string>
    <string name="calculate" translatable="false">Calculator</string>
    <string name="nothing_to_show" translatable="false">"nothing to show "</string>
    <string name="please_enter_username" translatable="false">Please enter username</string>
    <string name="please_enter_password" translatable="false">please enter password</string>
    <string name="login">Login</string>
    <string name="logged_in">LOGGED_IN</string>
    <string name="preference_file_key">preference file key</string>
    <string name="preference_userId_key">EcoTrackPreferenceUserIdKey</string>
    <string name="Car_Heating_Cooling">Car/Bicycle/Public Transportation</string>
    <string name="Estimate_your_carbon_footprint_based_On_Transportation_Energy_Dietary">Estimate your carbon footprint based on Transportation/Energy/Dietary choices</string>
    <string name="Estimate_your_carbon_footprint">Estimate your carbon footprint based on:\nTransportation/Energy/Dietary choices.</string>
    <string name="New_user_please_create_an_account">New User! Please Sign up here</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Please_sign_up_here">Please sign up here.</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="sign_up">Sign Up</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="Delete">Delete</string>
    <string name="Car__public_ransportation_air_Travel">Car/Public_transportation/Air_travel</string>
    <string name="Car__public_transportation_air_Travel">Car/Public_transportation/Air_travel</string>
    <string name="welcome">Welcome</string>
    <string name="calculate_carbon_footprint">Calculate Carbon Footprint</string>
    <string name="user_management">User management</string>
    <string name="community_engagement">Community Engagement</string>
    <string name="simple_tips_to_reduce_your_carbon_footprint">Simple Tips to Reduce Your Carbon Footprint</string>
    <string name="switch_it_off_turn_off_the_lights_when_natural_light_is_sufficient_and_when_you_leave_the_room_it_s_that_simple">Switch it Off Turn off the lights when natural light is sufficient and when you leave the room. It’s that simple!</string>
    <string name="Enviromental_News">Environmental News</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="Enter_password">Enter Password</string>
    <string name="password_must_be_at_least_8_character_long_ncontain_a_special_character">Password must be at least 8 character long \nContain a special character</string>
    <string name="passwordRequirements">Password must be at least eight characters long\nPassword must also contain a special character</string>
    <string name="welcomeMessage">Welcome to EcoTrack\n\n\nPlease login</string>
    <string name="Password">Password:</string>
    <string name="Enterpassword">Enter Password</string>
    <string name="Enter_username">Enter Username</string>
    <string name="Username2">Username:</string>
    <string name="update_information">Update Information</string>
    <string name="engage_environmental_advocacy">Engage Environmental advocacy</string>
</resources>