<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.WelcomeActivity">

    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="203dp"
        android:layout_height="44dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/calculateCarbonButton"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:text="@string/calculate_carbon_footprint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeTextView"
        android:onClick="onCalculateCarbonButtonClick"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/user_management_button"
        android:layout_width="282dp"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:text="@string/user_management"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateCarbonButton" />

    <Button
        android:id="@+id/community_engagement_button"
        android:layout_width="284dp"
        android:layout_height="58dp"
        android:text="@string/community_engagement"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="457dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_management_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>