<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:id="@+id/titleLoginTextView"
        android:textSize="24sp"
        android:text="@string/welcome_to_the_please_login"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="InvalidId" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/usernameLoginEditText"
        android:textSize="24sp"
        android:text=""
        android:hint="@string/please_enter_username"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView"
        android:autofillHints=""
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/passwordLoginEditText"
        android:textSize="24sp"
        android:text=""
        android:hint="@string/please_enter_password"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLoginEditText"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="TextFields" />

    <Button
        android:layout_width="267dp"
        android:id="@+id/loginButton"
        android:layout_height="89dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>